Fix prep-time spacing

--- a/style.css
+++ b/style.css
@@ -74,7 +74,6 @@ body {
 .prep-time {
 	width: 100%;
 	padding: 2rem;
-	padding-bottom: 0;
 	background-color: hsl(330, 100%, 98%);
 	border-radius: 1rem;
 }
@@ -93,8 +92,12 @@ body {
 	line-height: 2;
 }
 
+.prep-time__list {
+	margin-bottom: 0;
+}
 .instructions__list {
 	padding-left: 2rem;
+	line-height: 1;
 }
 
 .prep-time__el span,
